# breakpoint

./: README.md
breakpoint/: README.md  package-lock.json  package.json
breakpoint/app/: globals.css  layout.tsx  page.tsx
breakpoint/app/debrief/: page.tsx
breakpoint/app/session/: page.tsx
breakpoint/app/stats/: page.tsx
breakpoint/components/: DebriefAiPanel.tsx  DebriefAttentionStrip.tsx  DebriefCard.tsx  DebriefDriftChart.tsx  DebriefInsightsPanel.tsx  DomainFavicon.tsx  ExtensionHint.tsx  InterventionModal.tsx  SessionHeader.tsx  StartSession.tsx
breakpoint/hooks/: useExtensionSessionFeed.ts
breakpoint/lib/: anthropicClient.ts  debriefInsights.ts  debriefTimeline.ts  driftEngine.ts  eventDigest.ts  extensionBridge.ts  fakeEvents.ts  openaiClient.ts  researchQueueEstimate.ts  rootlyClient.ts  storage.ts  userProfile.ts
breakpoint/src/lib/: dummyData.ts
breakpoint/types/: event.ts  session.ts
desktop/: .env.example  .gitignore  floating.html  focus.html  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: breakpoint-commands.json
desktop/src-tauri/src/: bridge.rs  main.rs
docs/: architecture.md  ethics.md  flows.md  metrics.md  product.md  scope.md
extension/: README.md  background.js  manifest.json  overlay.js  package.json  popup.html  popup.js  youtubeProbe.js
extension/scripts/: bump-version.mjs  sync-manifest-version.mjs
(+107 files in other folders)
