[package]
name = "breakpoint-desktop"
version = "0.1.0"
description = "Breakpoint focus desktop shell"
authors = ["Breakpoint"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
